proj1/tests/other-tests/MINZ_tests/error/class.py
class class1:
def funct():
	print("hello")
hey3 = class1()
